# velox

./: .gitignore  BENCHMARKS.md  CURSOR_PROMPT.md  Cargo.toml  README.md  build.rs  install.sh  pyproject.toml
Formula/: omlx.rb
omlx/: engine_core.py  exceptions.py  scheduler.py  server.py
omlx/admin/: oq_manager.py  routes.py
omlx/admin/static/js/: dashboard.js
omlx/api/: tool_calling.py
packaging/omlx_app/: app.py
proto/: velox.proto
scripts/: bench.sh  bench_compare.py  bench_concurrent.sh  bench_results.json  bench_vs_ollama.py  render_charts.py  stress_24h.py
site/: index.html
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/api/: anthropic.rs  mod.rs  openai.rs  tool_calling.rs
src/backend/: candle.rs  llamacpp.rs  mistralrs_backend.rs  mlx.rs  mod.rs  traits.rs
src/cache/: hot.rs  mod.rs  paged.rs  prefix.rs  ssd.rs
src/engine/: mod.rs  pool.rs  scheduler.rs
src/memory/: enforcer.rs  mod.rs
src/model/: catalog.rs  discovery.rs  download.rs  mod.rs  registry.rs
src/paged/: dyn_quant.rs  llama.rs  metal_kernels.rs  mlx_kernels.rs  mod.rs  pages.rs  phi3.rs  prefix_cache.rs  qwen3.rs  request.rs  scheduler.rs  spec.rs
src/server/: grpc.rs  middleware.rs  mod.rs  routes.rs  sse.rs
tap/: velox.rb
tests/: dyn_quant_metal.rs  metal_batched_kernels_parity.rs  metal_decode_parity.rs  metal_qmm_4bit_parity.rs  metal_qmm_v2_bench.rs  metal_qmv_mlx_bench.rs  metal_qmv_mlx_parity.rs  metal_scatter_parity.rs  metal_swa_parity.rs  paged_llama_smoke.rs  paged_mistral_smoke.rs  paged_phi3_smoke.rs  paged_quant_smoke.rs  paged_scheduler.rs  paged_smoke.rs  perf_singlestream.rs  spec_decode.rs  test_engine_core.py  test_exceptions.py
