[package]
name = "aura-inference"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance LLM inference server for Apple Silicon with tiered KV cache"
repository = "https://github.com/Soflutionltd/aura-inference"
authors = ["Antoine Pinelli <antoine@soflution.com>"]

[dependencies]
# Web server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cache
safetensors = "0.4"
memmap2 = "0.9"

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
anyhow = "1"
thiserror = "2"
shellexpand = "3"

[features]
default = ["mlx"]
mlx = []
llamacpp = []

[[bin]]
name = "aura-inference"
path = "src/main.rs"

[lib]
name = "aura_inference"
path = "src/lib.rs"
