[package]
name = "velox"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The world's first Rust-native LLM inference server for Apple Silicon. Blazing fast, zero GC, tiered KV cache."
repository = "https://github.com/Soflutionltd/velox"
authors = ["Antoine Pinelli <antoine@soflution.com>"]

[dependencies]
# Web server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
tonic = "0.12"
prost = "0.13"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cache
safetensors = "0.4"
memmap2 = "0.9"

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
anyhow = "1"
thiserror = "2"
shellexpand = "3"
rand = "0.9"

# Tokenizer (used by both Candle and MLX backends, also re-exported via candle)
tokenizers = { version = "0.22", optional = true }

# Candle inference (default backend — pure Rust, Metal acceleration on Apple Silicon)
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
# Used by our custom paged-attention Metal kernels (compiled MSL + dispatch).
# Re-exports the same metal abstractions that candle-core uses internally.
candle-metal-kernels = { version = "0.10", optional = true }
objc2-metal = { version = "0.3", optional = true }
# Jinja2-compatible templating for HF tokenizer chat templates
minijinja = { version = "2", optional = true, features = ["loader"] }
minijinja-contrib = { version = "2", optional = true, features = ["pycompat"] }

# MLX inference — disabled by default. mlx-lm 0.0.1 (crates.io) has a critical
# attention/cache bug that causes garbage output during decode. We pin to the
# `main` branch where the RoPE-offset fix landed, but other inference bugs
# remain. Use only when upstream is verified working (Phase 2).
mlx-rs = { git = "https://github.com/oxideai/mlx-rs", branch = "main", optional = true }
mlx-lm = { git = "https://github.com/oxideai/mlx-rs", branch = "main", optional = true }
mlx-lm-utils = { git = "https://github.com/oxideai/mlx-rs", branch = "main", optional = true }

# HuggingFace model download
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
mistralrs = { version = "0.8.1", features = ["metal"], optional = true }

[build-dependencies]
tonic-build = "0.12"

[features]
# On Apple Silicon, the default is Candle + Metal GPU acceleration.
default = ["candle-metal"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:minijinja", "dep:minijinja-contrib"]
candle-metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]
mlx = ["dep:mlx-rs", "dep:mlx-lm", "dep:mlx-lm-utils", "dep:tokenizers"]
llamacpp = []
mistralrs = ["dep:mistralrs"]

[[bin]]
name = "velox"
path = "src/main.rs"

[lib]
name = "velox"
path = "src/lib.rs"
